--- a/index.html
+++ b/index.html
@@ -21,47 +21,48 @@
             <h1>This website is awesome</h1>
             <p class="hero-text">This website has some subtext that goes here under the main title. 
             It's a smaller font and the color is lower contrast.</p>
-            <button class="sign-up-button" type="button" alt="sign-up-button">Sign Up</button>
+            <button class="hero-button" type="button" alt="sign-up-button">Sign Up</button>
         </div>
                 <div class="hero-image">
                      <img src="./images/cafe.jpeg" alt="Cafe window" width="400" height="200">
                 </div>
     </div>
  </div>
-
-
-    <div class="info">
     <h2>Some random information</h2>
-    <button>Sign Up</button>
-    <div class="menu-items">
+    <div class="information-section">
+        <div class="card">
+            <img src="./images/coffee.jpg" alt="Cup of coffee" width="200" height="200">
+            <div class="text">this is some subtext under an illusion or image</div>
+        </div>
+        <div class="card">
+            <img src="./images/tea.jpg" alt="Cup of tea"  width="200" height="200">
+            <div class="text"> This is some subtext under an illusion or image</div>
+        </div>  
+        <div class="card">
+                <img src="./images/pastries.jpg" alt="Plate of crossiants" width="200" height="200">
+                <div class="text">This is some subtext under an illusion or image</div>
+            </div>
+        <div class="card">
+                <img src="./images/sandwiches.jpg" alt="Plate of avacado and egg toast"  width="200" height="200">
+            <div class="text">This is some subtext under an illusion or image</div>
+        </div>
     </div>
-     <div class="menu-item">
-    <img src="./images/coffee.jpg" alt="Cup of coffee" width="300" height="300">
-     </div>
-    <p>this is some subtext under an illusion or image</p>
-    <div class="menu-item">
-    <img src="./images/tea.jpg" alt="Cup of tea" width="300" height="300">
+  <div class="quote">
+        <p class="quote-text">This is an inspiring quote, or a testimonal from a customer. Maybe it's just
+        filling up space, or maybe people will actually read it. Who knows? All I know is I know is that
+        it looks nice.<p>
+             <div class="quote-speaker">-Thor, God of Thunder</div>
     </div>
-    <p>this is some subtext under an illusion or image</p>
-    <div class="menu-item">
-    <img src="./images/pastries.jpg" alt="Plate of crossiants" width="300" height="300">
+    <div class="call-to-action-section">
+         <div class="call-to-action">
+            <div>
+                 <h4>Call to action! It's time!</h4>
+                     <p class="call-to-action-text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+                    <button class="call-to-action-button">Sign Up</button>    
+         </div>
     </div>
-    <p>this is some subtext under an illusion or image</p>
-    <div class="menu-item">
-    <img src="./images/sandwiches.jpg" alt="Plate of avacado and egg toast" width="300" height="300">
-    <p>this is some subtext under an illusion or image</p>
-    </div>
-    
-    <div class="quote">
-    <p>Random qoute</p>
-    </div>
-
-    <div class="call-to-action">
-    <h4>Call to action! It's time!</h4>
-    <p>Sign up for our product by clicking that button right over there!</p>
-    <button>Sign Up</button>
-    </div>
-    </div>
+</div>
     <footer>Copyright © The Odin Project 2021</footer>
 </body>
 </html>
